# cold-call

./: .gitignore  README.MD  todo.md
contact-extractor/: README.MD
contact-extractor/input/: homestar_data_20250119_202648.csv
contact-extractor/src/: base_scraper.py  data_enricher.py  main.py
contact_extractor/: .gitignore  README.MD
contact_extractor/src/: base_scraper.py  data_enricher.py  email_processor.py  email_scraper.py  phone_processor.py  phone_scraper.py  requirements.txt
email-sender/: .env.example  .gitignore  personalized_email.json  readme.md  requirements.txt
email-sender/src/: config.py  main.py
email_extractor/: .gitignore  README.MD
email_extractor/src/: email_enricher.py  email_scraper.py  main.py
lead-reach/: package-lock.json  package.json
marketing-email-generator/: .gitignore  README 2.md  README.MD  customGPTInstructionsPrompt.txt  example.env   personalized_email.json  pyproject.toml  sender.csv  targets.csv  todo.md
marketing-email-generator/input/: sender.csv  targets.csv
marketing-email-generator/output/: personalized_email.json
marketing-email-generator/src/: crew.py  data_loader.py  llm_providers.py  main.py
marketing-email-generator/src/config/: agents.yaml  llm_config.py  tasks.yaml
marketing-email-generator/src/sales_personalized_email/: crew.py  main.py
marketing-email-generator/src/sales_personalized_email/config/: agents.yaml  tasks.yaml
platform-scrapers/homestar/: .gitignore  readme.md
sitemap-data-harvester/backend/: Combined Content React0.txt  package.json  (+2 more)
src/: main.py  scrapper.py  utils.py
(+21 files in other folders)
