[project]
name = "marketing-email-generator"
version = "0.1.0"
description = "AI-powered marketing email generator using crewAI"
authors = [
    { name = "Your Name", email = "you@example.com" },
]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2",
    "langchain-core>=0.2.30",
]

[project.scripts]
marketing-email-generator = "src.main:run"
train = "src.main:train"
replay = "src.main:replay"
test = "src.main:test"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"
